Remove unnecessary links to uni courses in about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -33,37 +33,38 @@
                 </nav>
             </header>
             <article>
-                <div id="about_me_writing">
+                <div id="about_me_writing_and_portrait">
                     <p>Hey hey!
                         My name is Arvin Ziba. 
                         I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
                         From my studies there, I gained a solid grasp in most of the content covered in CCNA plus about 85 hours of practical experience, through our state-of-the-art networking lab. 
                         I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in programming concepts in Python, data structures and algorithms, web and script programming, and statistics. 
-                        If you are interested in the details of my qualifications, I prepared a list of my successfully completed courses and a link to their description at Ontario Tech’s website. 
-                        I also encourage you check out my “Projects” page for more insight into my professional experience. 
+                        Below is a list of some of my completed courses at Ontario Tech. 
+                        I encourage you check out my “Projects” page for more insight into my professional experience. 
                         My hobbies include Dungeons and Dragons, other board games, video games, and hacking. 
                         Hacking is a big one. 
                         I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
                         This is something I do on my home lab hope to turn this into a career in cybersecurity.
                         Anyways, that’s a little about myself. Thanks for reading. 
                         </p> 
+
+                        <figure id="portrait_image">
+                            <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
+                        </figure>
                 </div>         
-                <figure id="portrait_image">
-                    <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
-                </figure>
                 <div id="university_courses">
                     <h3>Completed University Courses</h3>
                     <ul>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51673&print">Intro to Networking I</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51674&print">Intro to Networking II</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51685&print">Advanced Networking I</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51693&print">Web and Script Programming</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=61353&print">Intro to Programming for IT</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=61354&print">Object Oriented Programming for IT</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51688&print">Intro to Computer Security</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51103&print">Management of the Enterprise</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=51689&print">Computer Architecture</a></li>
-                        <li><a href="https://calendar.ontariotechu.ca/preview_course.php?catoid=34&coid=52212&print">Statistics for IT</a></li>
+                        <li>Intro to Networking I</li>
+                        <li>Intro to Networking II</li>
+                        <li>Advanced Networking I</li>
+                        <li>Web and Script Programming</li>
+                        <li>Intro to Programming for IT</li>
+                        <li>Object Oriented Programming for IT</li>
+                        <li>Intro to Computer Security</li>
+                        <li>Management of the Enterprise</li>
+                        <li>Computer Architecture</li>
+                        <li>Statistics for IT</li>
                     </ul>
                 </div>
                 <div id="about_me_video">
