--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,10 +79,8 @@
                         <input type="text" name="specify" size="32">
                     </div>
                     <br>
-                    <div id="form_buttons">
-                        <input type="submit" value="Submit">
-                        <input type="reset" value="Reset">
-                    </div>
+                    <input class="form_button" type="submit" value="Submit">
+                    <input class="form_button" type="reset" value="Reset">
                 </form>
             </article>
             <footer>
