Update divs in about.html
- Enclosed the introduction-to-self section in its own div.

--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
                 </nav>
             </header>
             <article>
-                <div id="about_me_writing_and_portrait">
+                <div id="about_me_writing">
                     <p>Hey hey!
                         My name is Arvin Ziba. 
                         I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
@@ -47,11 +47,10 @@
                         This is something I do on my home lab hope to turn this into a career in cybersecurity.
                         Anyways, that’s a little about myself. Thanks for reading. 
                         </p> 
-
-                        <figure id="portrait_image">
-                            <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
-                        </figure>
-                </div>         
+                </div>
+                <figure id="portrait_image">
+                    <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
+                </figure>       
                 <div id="university_courses">
                     <h3>Completed University Courses</h3>
                     <ul>
