Add ID to article tag in about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
                     </div>
                 </nav>
             </header>
-            <article>
+            <article id="about_me_content">
                 <div id="about_me_writing">
                     <p>Hey hey!
                         My name is Arvin Ziba. 
