Write about.html full viewport CSS

--- a/pages/about.html
+++ b/pages/about.html
@@ -48,7 +48,7 @@
                         Anyways, that’s a little about myself. Thanks for reading. 
                         </p> 
                 </div>
-                <figure id="portrait_image">
+                <figure id="profile_picture">
                     <img src="../images/portrait.png" alt="If you're seeing this, the image failed to load.">
                 </figure>       
                 <div id="university_courses">
@@ -57,7 +57,6 @@
                         <li>Intro to Networking I</li>
                         <li>Intro to Networking II</li>
                         <li>Advanced Networking I</li>
-                        <li>Web and Script Programming</li>
                         <li>Intro to Programming for IT</li>
                         <li>Object Oriented Programming for IT</li>
                         <li>Intro to Computer Security</li>
