Add subheadings to identify each page

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,7 @@
             <header>
                 <div id="banner">
                     <h1>ARVIN ZIBA</h1>
+                    <h3>HOME</h3>
                 </div>
                 <nav id="navigation_menu">
                     <div class="navigation_button">
