--- a/pages/about.html
+++ b/pages/about.html
@@ -16,6 +16,7 @@
             <header>
                 <div id="banner">
                     <h1>ARVIN ZIBA</h1>
+                    <h3>ABOUT</h3>
                 </div>
                 <nav id="navigation_menu">
                     <div class="navigation_button">
