Write banner CSS for tablet viewports

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,13 +46,13 @@
                     </div>
                     
                     <div class="form_prompt">
-                        <label id="surname">Surname</label>
+                        <label for="surname">Surname</label>
                         <br>
                         <input type="text" name="surname" size="32" placeholder="Surname">
                     </div>
 
                     <div class="form_prompt">
-                        <label id="surname">Email</label>
+                        <label for="email">Email</label>
                         <br>
                         <input type="email" name="email" size="48" placeholder="Email" required>
                     </div>
@@ -66,12 +66,12 @@
                     <div class="form_prompt">
                         <label for="how_find_me">How did you find this website?</label> 
                         <select name="how_find_me" required>
-                            <option value="Search Engine">Search engine</option>
-                            <option value="Word of mouth">Word of mouth</option>
-                            <option value="LinkedIn">LinkedIn</option>
-                            <option value="Indeed.com">Indeed</option>
-                            <option value="GitHub">GitHub</option>
-                            <option value="Other">Other</option>
+                            <option value="">Please select an option</option>
+                            <option value="1">Word of mouth</option>
+                            <option value="2">LinkedIn</option>
+                            <option value="3">Indeed</option>
+                            <option value="4">GitHub</option>
+                            <option value="5">Other</option>
                         </select>
                     </div>
                     <br>
