--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </section>
-                <seciton>
+                <section>
                     <div class="project_heading">
                         <h3>CSV-Data Management Application</h3>
                     </div>
@@ -86,9 +86,9 @@
                             Modules from the standard library or third-party libraries do not contribute to the algorithm’s functionality. </p>
                     </div>
                     <figure class="image_container"> 
-                        <img src="../images/csv-data-manager.png">
+                        <img src="../images/csv-data-manager.png" alt="If you're seeing this, the image failed to load.">
                     </figure>
-                </seciton>
+                </section>
 
                 <section>
                     <div class="project_heading">
@@ -101,10 +101,10 @@
                         This was a collaborative project with GitHub user <a href="https://github.com/ellieInfinity">ellieinfinity</a> as the other contributer.</p>
                     </div>
                     <figure class="image_container">
-                        <img src="../images/path-finder-interface.png">  
+                        <img src="../images/path-finder-interface.png" alt="If you're seeing this, the image failed to load.">  
                     </figure>
                     <figure class="image_container">
-                        <img src="../images/path-finder-data.png">
+                        <img src="../images/path-finder-data.png" alt="If you're seeing this, the image failed to load.">
                     </figure>
                 </section>
             </article>
