Add div containers for footer links
Meant for tablet and cellphone viewports.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,10 +110,15 @@
             </article>
             <footer>
                 <address>
-                    <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
-                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
-                    <br><br>
-                    <a href="https://github.com/ArvinoBoro">GitHub</a>
+                    <div class="contact_box">
+                        <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
+                    </div>
+                    <div class="contact_box">
+                        <a href="https://github.com/ArvinoBoro">GitHub</a>
+                    </div>
+                    <div clas="contact_box">
+                        <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                    </div>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
