--- a/pages/home.html
+++ b/pages/home.html
@@ -59,17 +59,19 @@
             </article>
             <footer>
                 <address>
-                    <div class="contact_box">
-                        <p>Contact me at <a href="mailto:arvin.ziba@ontariotechu.net">arvin.ziba@ontariotechu.net</a></p>
-                    </div>
-                    <div class="contact_box">
-                        <a href="https://github.com/ArvinoBoro">GitHub</a>
-                    </div>
-                    <div clas="contact_box">
-                        <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
-                    </div>
+                        <div class="contact_box">
+                            <a href="https://github.com/ArvinoBoro">GitHub</a>
+                        </div>
+                        <div class="contact_box">
+                            <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                        </div>
+                        <div class="contact_box">
+                            <a href="mailto:arvin.ziba@ontariotechu.net">Email Me</a>
+                        </div>
                 </address>
-                <p>&copy; Arvin Ziba 2024 </p>
+                <div id="copyright">
+                    <p>&copy; Arvin Ziba 2024 </p>
+                </div>
             </footer>
         </div>
     </body>
