Fix cut-out project image for smaller viewports
Put the project image and description one on top of the other. This allows the project image to resize itself without cutting-out any of its content.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,15 +38,15 @@
                     <div class="project_heading">
                         <h3>Home Networking Lab</h3>
                     </div>
-                    <div id="p1_desc_image">
-                        <div id="p1_desc">
-                            <p>My most thrilling project yet is my networking lab. 
-                                This is where I do most of the lab work for my Cisco certifications and networking courses. 
-                                I also use it as a dummy network for testing my network attacks. 
-                                More hardware will be deployed, and this section will be updated accordingly.</p> 
-                        </div>
-                        <div id="networking_lab_image"></div>
+                    <div id="p1_desc">
+                        <p>My most thrilling project yet is my networking lab. 
+                            This is where I do most of the lab work for my Cisco certifications and networking courses. 
+                            I also use it as a dummy network for testing my network attacks. 
+                            More hardware will be deployed, and this section will be updated accordingly.</p> 
                     </div>
+                    <figure class="image_container"> 
+                        <img src="../images/networking-lab.png" alt="If you're seeing this, the image failed to load.">
+                    </figure>
                     <div id="p1_hardware_applications">
                         <div id="p1_hardware">
                             <h3>Hardware</h3>
