--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,7 +38,7 @@
                     <div class="project_heading">
                         <h3>Home Networking Lab</h3>
                     </div>
-                    <div id="p1_desc">
+                    <div class="project_desc">
                         <p>My most thrilling project yet is my networking lab. 
                             This is where I do most of the lab work for my Cisco certifications and networking courses. 
                             I also use it as a dummy network for testing my network attacks. 
@@ -81,7 +81,7 @@
                     <div class="project_heading">
                         <h3>CSV-Data Management Application</h3>
                     </div>
-                    <div id="p2_desc">
+                    <div class="project_desc">
                         <p>A Python script that performs the functions listed in the user-interface snapshot (left) on the data snippet (right). 
                             Modules from the standard library or third-party libraries do not contribute to the algorithm’s functionality. </p>
                     </div>
@@ -94,7 +94,7 @@
                     <div class="project_heading">
                         <h3>Least-Cost Path Finder</h3>
                     </div>
-                    <div id="p3_desc">
+                    <div class="project_desc">
                         <p>A Python script that applies Dijkstra’s Shortest Path First algorithm to a CSV file representation of a graph. 
                             Each node in the graph represents a destination, and each edge represents a path.
                             The algorithm finds the least costly path from a start point to each charging station in the graph (denoted by the charger symbol).
