Fix odd-shaped navigation menu buttons

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,20 +18,22 @@
                     <h1>ARVIN ZIBA</h1>
                     <h3>PROJECTS</h3>
                 </div>
-                <nav id="navigation_menu">
-                    <div class="navigation_button">
-                        <a href="home.html">Home</a>
-                    </div>
-                    <div class="navigation_button">
-                        <a href="projects.html">Projects</a>
-                    </div>
-                    <div class="navigation_button">
-                        <a href="contact.html">Contact</a>
-                    </div>
-                    <div class="navigation_button">
-                        <a href="about.html">About</a>
-                    </div>
-                </nav>
+                <div id="navigation_menu">
+                    <nav>
+                        <div class="navigation_button">
+                            <a href="home.html">Home</a>
+                        </div>
+                        <div class="navigation_button">
+                            <a href="projects.html">Projects</a>
+                        </div>
+                        <div class="navigation_button">
+                            <a href="contact.html">Contact</a>
+                        </div>
+                        <div class="navigation_button">
+                            <a href="about.html">About</a>
+                        </div>
+                    </nav>
+                </div>
             </header>
             <article>
                 <section>
