Upload about page video and poster

--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
                         My hobbies include Dungeons and Dragons, other board games, video games, and hacking. 
                         Hacking is a big one. 
                         I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
-                        This is something I do on my home lab hope to turn this into a career in cybersecurity.
+                        This is something I regularly do on my home lab. 
                         Anyways, that’s a little about myself. Thanks for reading. 
                         </p> 
                 </div>
@@ -69,9 +69,9 @@
                     </ul>
                 </div>
                 <div id="about_me_video">
-                    <video width="" height="" controls poster="" preload="auto" muted loop>
-                        <source src="" type="video/mp4">
-                        <source src="" type="video/ogg">
+                    <video width="" height="" controls poster="../images/selfie.jpg" preload="auto" muted loop>
+                        <source src="../videos/about-video.mp4" type="video/mp4">
+                        <source src="../videos/about-video.ogv" type="video/ogg">
                     </video>
                 </div>
             </article>
