Add seperate container for contact buttons

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -89,9 +89,17 @@
             </article>
             <footer>
                 <address>
-                    <a href="https://github.com/ArvinoBoro">GitHub</a>
-                    <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
-                    <a href="mailto:arvin.ziba@ontariotechu.net">Email Me</a>
+                    <div id="contact_menu">
+                        <div class="navigation_button">
+                            <a href="https://github.com/ArvinoBoro">GitHub</a>
+                        </div>
+                        <div class="navigation_button">
+                            <a href="https://www.linkedin.com/in/arvin-ziba-51493424b/">LinkedIn</a>
+                        </div>
+                        <div class="navigation_button">
+                            <a href="mailto:arvin.ziba@ontariotechu.net">Email Me</a>
+                        </div>
+                    </div>
                 </address>
                 <p>&copy; Arvin Ziba 2024 </p>
             </footer>
