--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,7 +112,7 @@
             </article>
             <footer>
                 <address>
-                    <div id="contact_menu">
+                    <div id="social_menu">
                         <div class="navigation_button">
                             <a href="https://github.com/ArvinoBoro">GitHub</a>
                         </div>
