Copy and tweak contact page CSS for tablet viewports
The form instructions, form container, and form text fields were made wider from the tablet CSS stylesheet.

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,7 @@
             </article>
             <footer>
                 <address>
-                    <div id="contact_menu">
+                    <div id="social_menu">
                         <div class="navigation_button">
                             <a href="https://github.com/ArvinoBoro">GitHub</a>
                         </div>
