--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width">
         <link href="../stylesheets/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
         <link href="../stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
-        <link href="../stylesheets/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <link href="../stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
         <title>Contact</title>
     </head>
 
@@ -89,7 +89,7 @@
             </article>
             <footer>
                 <address>
-                    <div id="contact_menu">
+                    <div id="social_menu">
                         <div class="navigation_button">
                             <a href="https://github.com/ArvinoBoro">GitHub</a>
                         </div>
