Code cleanup and validation

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,10 +41,10 @@
                         My name is Arvin Ziba. 
                         I am a second-year student at Ontario Tech University, majoring in networking and IT security. 
                         From my studies there, I gained a solid grasp in most of the content covered in CCNA plus about 85 hours of practical experience, through our state-of-the-art networking lab. 
-                        I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in programming concepts in Python, data structures and algorithms, web and script programming, and statistics. 
+                        I also have a plenty of experience in programming in Python, C++, and JavaScript (more so in Python) from my courses in Python, data structures and algorithms, web and script programming, and statistics. 
                         Below is a list of some of my completed courses at Ontario Tech. 
                         I encourage you check out my “Projects” page for more insight into my professional experience. 
-                        My hobbies include Dungeons and Dragons, other board games, video games, and hacking. 
+                        My hobbies include Dungeons and Dragons, board games in general, video games, and hacking. 
                         Hacking is a big one. 
                         I have a passion for experimenting with networks and seek ways to breach their security (legally, of course). 
                         This is something I regularly do on my home lab. 
@@ -69,7 +69,7 @@
                     </ul>
                 </div>
                 <div id="about_me_video">
-                    <video width="" height="" controls poster="../images/selfie.jpg" preload="auto" muted loop>
+                    <video controls poster="../images/selfie.jpg" preload="auto" muted loop>
                         <source src="../videos/about-video.mp4" type="video/mp4">
                         <source src="../videos/about-video.ogv" type="video/ogg">
                     </video>
