--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,30 +44,30 @@
                     <div class="form_prompt">
                         <label for="first_name">First Name</label>
                         <br>
-                        <input type="text" name="first_name" size="32" placeholder="First Name">
+                        <input id="first_name" type="text" name="first_name" size="32" placeholder="First Name">
                     </div>
                     
                     <div class="form_prompt">
                         <label for="surname">Surname</label>
                         <br>
-                        <input type="text" name="surname" size="32" placeholder="Surname">
+                        <input id="surname" type="text" name="surname" size="32" placeholder="Surname">
                     </div>
 
                     <div class="form_prompt">
                         <label for="email">Email</label>
                         <br>
-                        <input type="email" name="email" size="48" placeholder="Email" required>
+                        <input id="email" type="email" name="email" size="48" placeholder="Email" required>
                     </div>
 
                     <div class="form_prompt">
                         <label for="comments">Comments</label>
                         <br>
-                        <textarea name="comments" cols="60" rows="5" maxlength="300" placeholder="Questions, Inquiries, Suggestions etc." required></textarea>
+                        <textarea id="comments" name="comments" cols="60" rows="5" maxlength="300" placeholder="Questions, Inquiries, Suggestions etc." required></textarea>
                     </div>
 
                     <div class="form_prompt">
                         <label for="how_find_me">How did you find this website?</label> 
-                        <select name="how_find_me" required>
+                        <select id="how_find_me" name="how_find_me" required>
                             <option value="">Please select an option</option>
                             <option value="1">Word of mouth</option>
                             <option value="2">LinkedIn</option>
@@ -80,7 +80,7 @@
                     <div class="form_prompt">
                         <label for="specify">If you selected "Other", please specify how.</label>
                         <br>
-                        <input type="text" name="specify" size="32">
+                        <input id="specify" type="text" name="specify" size="32">
                     </div>
                     <br>
                     <input class="form_button" type="submit" value="Submit">
